# mc-pea

./: .env.example  .gitignore  .gitmodules  DB_AUTH_MCP_VALIDATION.md  FILESYSTEM_MCP_VALIDATION.md  FINAL_MCP_VALIDATION_REPORT.md  GITHUB_MCP_SETUP.md  MCP_COMPLETE_INTEGRATION_FINAL.md  MCP_INTEGRATION_STATUS_FINAL.md  MCP_MASTER_REFERENCE.md  README.md  REQUIREMENTS.md  debug-auth-mcp-session.js  debug-http-requests.js  demo-mcpea-integration.js  investigate-db-sessions.js  package-lock.json  package.json  setup-everything.sh  test-auth-mcp-with-session.js  test-auth-mcp.js  test-database-mcp.js  test-github-mcp.js  test-github-tools.js  test-mcp-protocol.js  validate-auth-mcp-session.js  validate-auth-mcp.js  validate-template.js
ai-agents/: .env.ai-agents.example  .env.example  .gitignore  AGENT_CONFIG_CENTRALIZATION_COMPLETE.md  AGENT_SEPARATION_SUMMARY.md  AI_AGENT_IMPLEMENTATION_COMPLETE.md  DEPLOYMENT_GUIDE.md  DOCKER_FREE_TESTING.md  Dockerfile.ai-agents  ENDPOINT_DISCOVERY_COMPLETENESS_STRATEGY.md  ENHANCED_HTTP_METHODS_SUPPORT.md  ENV_VARIABLE_GUIDE.md  GITHUB_MCP_DRYRUN_GUIDE.md  GITHUB_VALIDATION_COMPLETE.md  HOT_RELOAD_CONFIG_GUIDE.md  MCP_ONLY_REFACTORING_COMPLETE.md  PLAYWRIGHT_PURGE_COMPLETE.md  README.md  REFACTORING_COMPLETE.md  WEBSCRAPER_CLEANUP_SUMMARY.md  WEB_SCRAPER_AND_CORE_DOCUMENTATION.md  WEB_SCRAPER_REFACTORING_COMPLETE.md  WEB_SCRAPING_STRATEGY_ANALYSIS.md  __init__.py  agent_configs.json  api_extraction_flow.py  api_link_content_extractor_output.json  api_link_discovery_output.json  app.py  config.json  data_entry.json  docker_free_test.py  (+23 more)
(+153 files in other folders)
