[tool.poetry]
name = "mc-pea-ai-agents"
version = "0.1.0"
description = "AI agents for MCP server generation and management"
authors = ["MC-PEA Team <team@mc-pea.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
anthropic = "^0.17.0"
crewai = "^0.28.0"
streamlit = "^1.31.0"
plotly = "^5.17.0"
pandas = "^2.0.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
typing-extensions = "^4.8.0"
pathlib2 = "^2.3.0"
jinja2 = "^3.1.0"
aiofiles = "^23.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.0"
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[tool.poetry.scripts]
mc-pea-ui = "ai_agents.interfaces.server_generator:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
